# customer-service-ai-coach

./: .gitignore  Makefile  README.md
agent/: .env.local.example  README.md  pyproject.toml
agent/src/coach_agent/: __init__.py  config.py  main.py
agent/src/coach_agent/detectors/: __init__.py  base.py  filler.py  pacing.py  prohibited.py  sentiment.py
agent/src/coach_agent/pipeline/: __init__.py  metrics.py
agent/src/coach_agent/stt/: __init__.py  local_whisper.py  ring_buffer.py
agent/src/coach_agent/transport/: __init__.py  liveness.py
agent/tests/: __init__.py  e2e_listener.py  e2e_speaker_listener.py  test_filler.py  test_hallucination_guard.py  test_imports.py  test_liveness.py  test_local_whisper_stream.py  test_metrics_builder.py  test_pacing.py  test_prohibited.py  test_ring_buffer.py  test_sentiment.py
coach-ui/: .env.local.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
coach-ui/src/: App.test.tsx  App.tsx  DebugPane.test.tsx  DebugPane.tsx  MetricsBar.test.tsx  MetricsBar.tsx  TranscriptPane.test.tsx  TranscriptPane.tsx  liveness.test.ts  liveness.ts  metrics.test.ts  metrics.ts  token.ts  transcript.test.ts  transcript.ts
docs/: AS-BUILT.md  CODE-TOUR.md  DEMO.md  PRESENTATION.md
docs/planning/: idea-honing.md  rough-idea.md  summary.md
docs/planning/design/: detailed-design.md
docs/planning/implementation/: plan.md
docs/planning/research/: detectors.md  frontend.md  livekit-agents-sdk.md  livekit-local-setup.md  local-asr.md  local-llm.md  webrtc-stack-comparison.md
scripts/: setup.sh  start.sh  stop.sh
