[project]
name = "coach-agent"
version = "0.1.0"
description = "Customer Service AI Coach — local LiveKit agent for real-time practice feedback"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akash Srivastava" }]
dependencies = [
    "python-dotenv>=1.0",
    "livekit-agents>=0.11",
    "livekit-plugins-silero>=0.6",
    "faster-whisper>=1.0",
    "numpy>=1.26",
    "rapidfuzz>=3.0",
    "vaderSentiment>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coach_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
